ui: Fix flags alignment in the editor
Fixes #7512

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -1822,8 +1822,6 @@ a.language:hover {
 #unit_all_flags {
   background-color: transparent;
   display: inline-block;
-  padding: 0 6px;
-  border-radius: 6px;
 }
 
 #unit_all_flags.flags-updated {
